# ethi-AI-assistant

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierrc  AGENTS.md  BACKEND_REFACTORING_SUMMARY.md  LICENSE  README.md  REFACTORING_COMPLETED.md  SPEC.md  package.json  turbo.json  vitest.workspace.ts
.github/workflows/: cd.yml  ci.yml
apps/backend/: package.json  requirements.txt  tsconfig.json  vitest.config.ts
apps/backend/app/: __init__.py  config.py  main.py
apps/backend/app/chunker/: base.py  recursive.py
apps/backend/app/embeddings/: ollama_client.py
apps/backend/app/memory/: store.py
apps/backend/app/rag/: __init__.py  service.py
apps/backend/app/vectorstore/: chromadb_store.py
apps/backend/src/: main.ts
apps/backend/src/common/: error-handler.ts  index.ts  logger.ts
apps/backend/src/config/: env.ts  (+2 more)
apps/desktop/: .eslintrc.cjs  index.html  package.json  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/native-module/: Cargo.toml  index.js  package.json
apps/desktop/native-module/src/: audio_config.rs  lib.rs  microphone.rs  silence_suppression.rs  vad.rs
apps/desktop/native-module/src/speaker/: mod.rs  windows.rs
apps/desktop/scripts/: create-asar.ps1  package-exe.ps1  rename-electron.mjs  wait-and-electron.cjs
apps/desktop/src/: App.js  App.tsx  main.js
docker/: backend.Dockerfile  docker-compose.yml
docker/monitoring/: grafana-dashboard.json  prometheus.yml
docker/nginx/: Dockerfile  nginx.conf
docker/redis/: redis.conf
scripts/: seed.ts  setup.sh
(+211 files in other folders)
